cabal-version:      3.0
name:               storyteller
version:            0.1.0.0
synopsis:           LLM-powered story development system
description:        Storyteller treats narrative as queryable, versioned state,
                    combining git version control, hierarchical summarization,
                    and character knowledge tracking.
license:            MIT
author:             storyteller authors
maintainer:         authors@storyteller.dev
category:           Development
build-type:         Simple
data-files:         test/fixtures/minimal.yaml

library
  exposed-modules:  Storage.Core
                  , Storage.FS
                  , Storage.Ops
                  , Storage.Tick
                  , Storyteller
                  , Storyteller.Core.Types
                  , Storyteller.Writer.Agent
                  , Storyteller.Core.Storage
                  , Storyteller.Core.Branch
                  , Storyteller.Core.Undo
                  , Storyteller.Core.Git
                  , Storyteller.Core.Runtime
                  , Storyteller.Core.Prompt
                  , Storyteller.Core.CLI.Env
                  , Storyteller.Core.LLM.Registry
                  , Storyteller.Core.LLM.Role
                  , Storyteller.Core.LLM.Settings
                  , Storyteller.Writer.Agent.Continuation
                  , Storyteller.Writer.Agent.ContextFilter
                  , Storyteller.Writer.Agent.Chat
                  , Storyteller.Writer.Agent.CharContext
                  , Storyteller.Writer.Agent.WorldContext
                  , Storyteller.Writer.Agent.ChapterContext
                  , Storyteller.Writer.Agent.AskCharacter
                  , Storyteller.Common.Splitter
                  , Storyteller.Writer.Agent.Tracker
                  , Storyteller.Writer.Agent.CharGen
                  , Storyteller.Writer.Agent.Write
                  , Storyteller.Writer.Agent.MessageWindow
                  , Storyteller.Writer.Agent.FlowWrite
                  , Storyteller.Writer.Agent.Outline
                  , Storyteller.Writer.Agent.Fix
                  , Storyteller.Writer.Agent.ReplaceTool
                  , Storyteller.Writer.Agent.ContextPreview
                  , Storyteller.Writer.Agent.Summarizer
                  , Storyteller.Writer.Agent.SummaryAccess
                  , Storyteller.Writer.Agent.ChapterSummarizer
                  , Storyteller.Writer.Agent.Tasks
                  , Storyteller.Core.Atom
                  , Storyteller.Core.Create
                  , Storyteller.Common.Types
                  , Storyteller.Common.Annotation
                  , Storyteller.Common.Swipe
                  , Storyteller.Common.Summary
                  , Storyteller.Writer.Types
                  , Storyteller.Writer.Presence
                  , Storyteller.Writer.Library
                  , Storyteller.Writer.Branches
                  , Storyteller.Writer.Lore
                  , Server.Core.Protocol
                  , Server.Core.Util
                  , Server.Core.Run
                  , Server.Core.Logging
                  , Server.Core.Branch
                  , Server.Core.File
                  , Server.Writer.Env
                  , Server.Writer.GitWorker
                  , Server.Writer.Notification
                  , Server.Writer.Run
                  , Server.Writer.Session.Protocol
                  , Server.Writer.Session.Connection
                  , Server.Writer.Session.Dispatch
                  , Server.Writer.Branch
                  , Server.Writer.File
                  , Server.Writer.Character
                  , Server.Writer.Library
                  , Server.Writer.Lore
                  , Server.Writer.Branch.Protocol
                  , Server.Writer.Branch.Connection
                  , Server.Writer.Branch.Dispatch
                  , Server.Writer.File.Protocol
                  , Server.Writer.File.Connection
                  , Server.Writer.File.Dispatch
                  , Server.Writer.Character.Protocol
                  , Server.Writer.Character.Connection
                  , Server.Writer.ContextView.Protocol
                  , Server.Writer.ContextView.Connection
                  , Server.Writer.Library.Protocol
                  , Server.Writer.Library.Connection
                  , Server.Writer.Library.Dispatch
                  , Server.Writer.Lore.Protocol
                  , Server.Writer.Lore.Connection
  other-modules:
  build-depends:    base >=4.18 && <5
                  , runix
                  , runix-tools
                  , universal-llm
                  , text
                  , bytestring
                  , containers
                  , array
                  , filepath
                  , directory
                  , Glob
                  , polysemy
                  , template-haskell
                  , gitlib-effect
                  , polysemy-plugin
                  , aeson
                  , autodocodec
                  , scientific
                  , vector
                  , random
                  , mtl
                  , websockets
                  , wai
                  , warp
                  , wai-websockets
                  , http-types
                  , yaml
                  , stm
                  , time
                  , async
                  , data-default
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
                    -Wcompat
                    -Widentities
                    -Wredundant-constraints
                    -fwarn-tabs
                    -O2

-- ---------------------------------------------------------------------------
-- Executables
-- ---------------------------------------------------------------------------

common exe-common
  build-depends:    base >=4.18 && <5
                  , storyteller
                  , gitlib-effect
                  , runix
                  , universal-llm
                  , text
                  , bytestring
                  , containers
                  , polysemy
                  , polysemy-plugin
  default-language: Haskell2010
  ghc-options:      -Wall
                    -Wcompat
                    -Widentities
                    -Wredundant-constraints
                    -fwarn-tabs
                    -threaded
                    -rtsopts
                    -with-rtsopts=-N
                    -O2
                    -fplugin=Polysemy.Plugin

-- | Append a generated story section.
executable story-write
  import:           exe-common
  main-is:          Write.hs
  hs-source-dirs:   app

-- | Expand a story outline into a chapter beat sheet.
executable story-outline
  import:           exe-common
  main-is:          Outline.hs
  hs-source-dirs:   app

-- | Generate a chapter's prose from its beat sheet.
executable story-chapter
  import:           exe-common
  main-is:          Chapter.hs
  hs-source-dirs:   app

-- | Copy atoms from a source branch into an entity/tracker branch.
executable story-track
  import:           exe-common
  main-is:          Track.hs
  hs-source-dirs:   app

-- | Split working-tree diffs and merge them into the chain at the right positions.
executable story-rebase
  import:           exe-common
  main-is:          Rebase.hs
  hs-source-dirs:   app

-- | Resolve a scenario template into a character sheet and commit it to an entity branch.
executable story-chargen
  import:           exe-common
  main-is:          CharGen.hs
  hs-source-dirs:   app
  build-depends:    yaml
                  , random


-- | WebSocket server.
executable story-server
  import:           exe-common
  main-is:          Server.hs
  hs-source-dirs:   app
  build-depends:    wai
                  , warp
                  , websockets
                  , wai-websockets
                  , http-types
                  , filepath
                  , directory

test-suite storyteller-test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:    Git.Mock
                  , Paths_storyteller
                  , Storage.MockStore
                  , Storage.OpCounting
                  , Storage.CoreSpec
                  , Storage.FSSpec
                  , Storage.OpsSpec
                  , Storage.CommitWorktreeSpec
                  , Storage.FoldIntoOpCountSpec
                  , Storage.ChainEditSpec
                  , Storage.TickSpec
                  , Storyteller.FileAtomsSpec
                  , Storyteller.AtGenericSpec
                  , Storyteller.BranchScopeSpec
                  , Storyteller.StorageSpec
                  , Storyteller.GitCascadeSpec
                  , Storyteller.AppendSpec
                  , Storyteller.CommitNewFilesSpec
                  , Storyteller.CreateSpec
                  , Storyteller.SubdirSpec
                  , Storyteller.SplitterSpec
                  , Storyteller.TrackerSpec
                  , Storyteller.SummarySpec
                  , Storyteller.SummaryAccessSpec
                  , Storyteller.ChapterSummarizerSpec
                  , Storyteller.TasksSpec
                  , Storyteller.CharGenSpec
                  , Storyteller.CharContextSpec
                  , Storyteller.WorldContextSpec
                  , Storyteller.PresenceSpec
                  , Storyteller.Writer.CharacterAnswerSpec
                  , Storyteller.Writer.WriteSpec
                  , Storyteller.Writer.MessageWindowSpec
                  , Storyteller.Writer.ReplaceToolSpec
                  , Storyteller.UndoSpec
                  , Storyteller.ChatSpec
                  , Storyteller.LibrarySpec
                  , Storyteller.BranchesSpec
                  , Storyteller.ContextFilterSpec
                  , Storyteller.ContextPreviewSpec
                  , Storyteller.OutlineSpec
                  , Storyteller.Common.SwipeSpec
                  , Server.TestStack
                  , Server.BranchSpec
                  , Server.Writer.BranchSpec
                  , Server.Writer.FileSpec
                  , Server.FileSpec
                  , Server.CharacterSpec
                  , Server.LibrarySpec
                  , Server.NotificationSpec
                  , Server.StorageNotifySpec
                  , Server.Writer.GitWorkerSpec
  autogen-modules:  Paths_storyteller
  build-depends:    base >=4.18 && <5
                  , storyteller
                  , gitlib-effect
                  , polysemy
                  , polysemy-plugin
                  , containers
                  , bytestring
                  , text
                  , runix
                  , universal-llm
                  , time
                  , mtl
                  , hspec >=2.11
                  , QuickCheck >=2.14
                  , hashable
                  , aeson
                  , yaml
                  , stm
                  , process
                  , temporary
  hs-source-dirs:   test
  default-language: Haskell2010
  ghc-options:      -Wall
                    -Wcompat
                    -Widentities
                    -Wredundant-constraints
                    -fwarn-tabs
                    -threaded
                    -rtsopts
                    -with-rtsopts=-N
                    -fplugin=Polysemy.Plugin

-- | Integration suite for agent *quality*, not mechanics: real
-- 'Storyteller.Core.Runtime.StoryModel' calls (cached to disk via
-- 'Runix.LLM.Cache', see @test/fixtures/llm-agent-cache/@), checking whether
-- context is actually used, edits are actually targeted, etc. -- properties
-- @storyteller-test@'s mocked LLM-free specs can't reach.
--
-- A plain @executable@, not a @test-suite@, even though @Main.hs@ just
-- calls 'Test.Hspec.hspec' -- deliberately: a @test-suite@ component is
-- exactly what @cabal test@ (with no target) runs by default, and this one
-- shouldn't be swept up in that (hits real models, needs network/API keys,
-- can take minutes). Being an @executable@ means @cabal test@/@cabal build
-- all@ never touch it; run it with
-- @cabal run storyteller-agent-integration-test@ (pass hspec args after
-- @--@, e.g. @-- --match "..."@).
executable storyteller-agent-integration-test
  main-is:          Main.hs
  other-modules:    Agent.Integration.Harness
                  , Agent.Integration.Judge
                  , Agent.Integration.Journey
                  , Agent.Integration.CharContextWriteSpec
                  , Agent.Integration.ReworkAtomSpec
                  , Agent.Integration.JourneySpec
                  , Agent.Integration.OutlineSplitQualitySpec
                  , Agent.Integration.OutlineSplitDefaultsSpec
                  , Agent.Integration.OutlineSplitEscapingSpec
                  , Agent.Integration.OutlineSplitCheck
                  , Agent.Integration.OutlineSplitFreeformSpec
                  , Agent.Integration.OutlineSplitBulkSpec
                  , Agent.Integration.CharacterPresenceSpec
                  , Agent.Integration.WorldLoreSpec
                  , Agent.Integration.JournalInstructionSpec
                  , Agent.Integration.JournalIronySpec
                  , Agent.Integration.WriterStyleGuideSpec
                  , Agent.Integration.WriterPinnedContextSpec
                  , Agent.Integration.WriterEarlierChaptersSpec
                  , Agent.Integration.WriterConversationHistorySpec
                  , Agent.Integration.TasksSteeringSpec
                  , Agent.Integration.TasksSuggestionQualitySpec
                  , Agent.Integration.TasksReconcileSpec
                  , Agent.Integration.ToolCallQuality
                  , Git.Mock
                  , Paths_storyteller
  autogen-modules:  Paths_storyteller
  build-depends:    base >=4.18 && <5
                  , storyteller
                  , gitlib-effect
                  , polysemy
                  , polysemy-plugin
                  , text
                  , bytestring
                  , runix
                  , universal-llm
                  , hspec >=2.11
                  , aeson
                  , autodocodec
                  , data-default
                  , containers
                  , hashable
  hs-source-dirs:   test/agent-integration, test
  default-language: Haskell2010
  ghc-options:      -Wall
                    -Wcompat
                    -Widentities
                    -Wredundant-constraints
                    -fwarn-tabs
                    -fplugin=Polysemy.Plugin

-- | Scaling probe for the At/updateReferences cascade cost (see
-- bench/PerfCascade.hs). Not a correctness test: scaling badly is a
-- performance fact to observe via 'cabal bench', not a build failure.
benchmark storyteller-cascade-perf
  type:             exitcode-stdio-1.0
  main-is:          PerfCascade.hs
  other-modules:    Git.Mock
  build-depends:    base >=4.18 && <5
                  , storyteller
                  , gitlib-effect
                  , polysemy
                  , polysemy-plugin
                  , containers
                  , text
                  , bytestring
                  , runix
                  , hashable
  hs-source-dirs:   bench, test
  default-language: Haskell2010
  ghc-options:      -Wall
                    -Wcompat
                    -Widentities
                    -Wredundant-constraints
                    -fwarn-tabs
                    -threaded
                    -rtsopts
                    -with-rtsopts=-N
                    -O2
                    -fplugin=Polysemy.Plugin

-- | Diagnostic: reproduce a real-git-backed edit deep in history (not
-- Git.Mock) to isolate whether the remaining cost after the storage-monad
-- migration is git-subprocess-call count rather than Polysemy dispatch.
-- Not a correctness check; never fails the build.
benchmark real-git-perf
  type:             exitcode-stdio-1.0
  main-is:          RealGitPerf.hs
  build-depends:    base >=4.18 && <5
                  , storyteller
                  , gitlib-effect
                  , polysemy
                  , polysemy-plugin
                  , containers
                  , text
                  , runix
  hs-source-dirs:   bench
  default-language: Haskell2010
  ghc-options:      -Wall
                    -Wcompat
                    -Widentities
                    -Wredundant-constraints
                    -fwarn-tabs
                    -threaded
                    -rtsopts
                    -with-rtsopts=-N
                    -O2
                    -fplugin=Polysemy.Plugin

-- | Reproduces the live merge.atoms/split.atoms report directly: real
-- Storage.Ops.mergeAtoms/splitTick, real tracker branches, one
-- persistently-open interpreter per backend across repeated requests --
-- see MergeSplitPerf.hs's own doc for why this differs from
-- gitlib-effect's synthetic linear-chain benches. Not a correctness
-- check; never fails the build.
benchmark storyteller-mergesplit-perf
  type:             exitcode-stdio-1.0
  main-is:          MergeSplitPerf.hs
  build-depends:    base >=4.18 && <5
                  , storyteller
                  , gitlib-effect
                  , polysemy
                  , polysemy-plugin
                  , containers
                  , text
                  , temporary
                  , filepath
                  , runix
  hs-source-dirs:   bench
  default-language: Haskell2010
  ghc-options:      -Wall
                    -Wcompat
                    -Widentities
                    -Wredundant-constraints
                    -fwarn-tabs
                    -threaded
                    -rtsopts
                    -with-rtsopts=-N
                    -O2
                    -fplugin=Polysemy.Plugin


